--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,16 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0"?>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>HelloServlet</servlet-name>
-  	<display-name>HelloServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.epam.web.servlet.HelloServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>HelloServlet</servlet-name>
-  	<url-pattern>/HelloServlet</url-pattern>
-  </servlet-mapping>
-  
+<web-app version="3.1" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee">
+
+<display-name>Archetype Created Web Application</display-name>
+
+
+<error-page>
+
+<exception-type>java.lang.Throwable</exception-type>
+
+<location>/pages/error500.jsp</location>
+
+</error-page>
+
 </web-app>
