--- a/src/main/resources/prop/pagecontent.properties
+++ b/src/main/resources/prop/pagecontent.properties
@@ -9,3 +9,13 @@ loginSelect.message = Authorization
 loginSelect.adminButton = Admin
 loginSelect.applicantButton = Applicant
 loginSelect.userButton = User
+main.title = Interpol - Main
+main.login = Login
+main.button = Wanted persons
+main.contacts = Contact us
+main.wanted = Red Notices for wanted persons
+main.description = A Red Notice is a request to law enforcement worldwide to locate and provisionally arrest a person pending extradition, surrender, or similar legal action.
+main.admin = Admin
+main.applicant = Applicant
+main.user = User
+main.registration = Registration
